# jcu-c-piskvorky

./: .gitignore  CMakeLists.txt  history.txt  main.cpp
src/: AI.cpp  AI.h  Coordinates.h  CoordinatesBlock.cpp  CoordinatesBlock.h  CoordinatesGroup.h  Engine.cpp  Engine.h  Gui.cpp  Gui.h  InputReader.cpp  InputReader.h  Object.h  Player.h  ScoreWriter.cpp  ScoreWriter.h  Storage.cpp  Storage.h  Tools.h  WinException.h
